Refactor and reorganize JavaScript files
Replaced `login-script.js` with modularized structure for better maintainability. Introduced `api.js` for API interactions and `core.js` for state management and utility functions. This improves code readability and reuse while separating concerns.